# GCIC-ML

./: .gitignore  .ocamlformat  README.md  dune-project  gcic.opam  gcic1  inductives  package.json  shell.nix  updateErrorMsgs.sh
.github/workflows/: format.yml  main.yml
esy.lock/: index.json
examples/: inductives.gcic  omega.gcic  vector.gcic
lib/: ast.ml  ast.mli  castCIC.ml  compile.ml  dune  main.ml  pipeline.ml
lib/cast_cic/: ast.ml  ast.mli  cast_cic.ml  context.ml  context.mli  declarations.ml  declarations.mli  dune  elaboration.ml  elaboration.mli  reduction.ml  reduction.mli  typing.ml  typing.mli
lib/common/: castCIC.ml  castCIC.mli  context.ml  context.mli  declarations.ml  declarations.mli  dune  gCIC.ml  gCIC.mli  id.ml  id.mli  std.ml
lib/config/: config.ml  config.mli  dune  flag.ml  flag.mli  variant.ml  variant.mli
lib/elaboration/: ast.ml  ast.mli  cast_CIC.ml  cast_CIC.mli  dune  gCIC.ml  gCIC.mli  main.ml
lib/kernel/: ast.ml  ast.mli  cast_cic.ml  cast_cic.mli  context.ml  context.mli  declarations.ml  declarations.mli  dune  reduction.ml  reduction.mli  reduction_term.ml  reduction_term.mli  typing.ml  typing.mli  variant.ml  variants.ml  variants.mli
lib/parsing/: README.md  ast.ml  ast.mli  command.ml  dune  lex_and_parse.ml  lex_and_parse.mli  lexer.ml  lexer.mll  parser.mly  parserMessages.messages  update_error_msgs.sh
lib/reduction/: ast.ml  cast_CIC.ml  cast_CIC.mli  dune  main.ml
lib/typing/: ast.mli  cast_CIC.ml  dune  (+2 more)
nix/: sources.json
scripts/: repl.completion  repl.sh
test/: dune  test_gcic.ml  test_main.ml
(+48 files in other folders)
