(lang dune 2.9)

(name gcic)

(source
 (github pleiad/GCIC))

(authors "Tomás Díaz" "Stefan Malewski" "Éric Tanter")

(maintainers
 "Tomás Díaz"
 "Stefan Malewski"
 "Éric Tanter")

(generate_opam_files true)

(package
 (name gcic)
 (synopsis "Prototype implementation of GCIC")
 (description "Prototype implementation of GCIC")
 (depends))

(using menhir 2.1)
